@@ -12,6 +12,8 @@ import java.util.Optional;
 import javax.mail.MessagingException;
 import javax.mail.internet.MimeMessage;
 import javax.servlet.http.HttpSession;
+
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.mail.javamail.MimeMessageHelper;
@@ -98,6 +100,8 @@ public class UsuarioServicio implements UserDetailsService, ServicioBase<Usuario
 	public Usuario editar(Usuario usuario) throws Exception {
 		validar(usuario);
 //		validarMayoriaEdad(usuario);
+		usuario.setAlta(true);
+		usuario.setRol(Rol.USUARIO);
 		BCryptPasswordEncoder encriptada = new BCryptPasswordEncoder();
 		usuario.setContrasenia(encriptada.encode(usuario.getContrasenia()));
 		return usuarioRepositorio.save(usuario);
@@ -130,17 +134,74 @@ public class UsuarioServicio implements UserDetailsService, ServicioBase<Usuario
 			return result;
 		}
 	}
+	
+	@Transactional(propagation = Propagation.REQUIRED, rollbackFor = { Exception.class })
+	public Usuario darBaja(Long idUsuario) {
+		Usuario usuario = usuarioRepositorio.getById(idUsuario);
+		usuario.setAlta(false);
+		return usuario;
+	}
+	
+	@Transactional(propagation = Propagation.REQUIRED, rollbackFor = { Exception.class })
+	public Usuario darAlta(Long idUsuario) {
+		Usuario usuario = usuarioRepositorio.getById(idUsuario);
+		usuario.setAlta(true);
+		return usuario;
+	}
 
 	@Override
 	@Transactional(propagation = Propagation.REQUIRED, rollbackFor = { Exception.class })
 	public void eliminar(Long idUsuario) {
 		usuarioRepositorio.deleteById(idUsuario);
 	}
+	
+	public long totalUsuario() throws Exception {
+		return usuarioRepositorio.count();
+	}
+	
+	public int totalAlta() throws Exception {
+		double total = usuarioRepositorio.totalAlta() * 100 / totalUsuario();
+		return (int) Math.round(total);
+	}
+	
+	public int totalBaja() throws Exception {
+		return 100 - totalAlta();
+	}
+
+	@Transactional(readOnly = true)
+	public List<Usuario> usuariosActivos() {
+
+		return usuarioRepositorio.buscarUsuarioActivos();
+	}
+
+	@Transactional(readOnly = true)
+	public List<Usuario> usuariosInactivos() {
+
+		return usuarioRepositorio.buscarUsuarioInactivos();
+	}
+
+	@Transactional(readOnly = true)
+	public Integer cantidadDeUsuario() {
+
+		return usuarioRepositorio.cantidadUsuario();
+	}
+
+	@Transactional(readOnly = true)
+	public Double porcentajeUsuariosActivos() {
+
+		return (double) (usuarioRepositorio.cantidadUsuario() / usuarioRepositorio.buscarUsuarioActivos().size());
+	}
+
+	@Transactional(readOnly = true)
+	public Double porcentajeUsuariosInactivos() {
+
+		return (double) (usuarioRepositorio.cantidadUsuario() / usuarioRepositorio.buscarUsuarioInactivos().size());
+	}
 
 	public void validar(Usuario usuario) throws Exception {
 		Date hoy = new Date();
 
-		if (usuario.getNombre() == null || usuario.getNombre().isBlank()) {
+		if (usuario.getNombre() == null || StringUtils.isBlank(usuario.getNombre())) {
 			throw new Exception("Nombre de usuario inválido");
 		}
 
@@ -149,7 +210,7 @@ public class UsuarioServicio implements UserDetailsService, ServicioBase<Usuario
 			throw new Error("E-mail de usuario inválido");
 		}
 
-		if (usuario.getNombreDeUsuario() == null || usuario.getNombreDeUsuario().isBlank()) {
+		if (usuario.getNombreDeUsuario() == null || StringUtils.isBlank(usuario.getNombreDeUsuario())) {
 			throw new Exception("Nombre de usuario inválido");
 		}
 
